--- a/User/index.html
+++ b/User/index.html
@@ -22,7 +22,7 @@
 
 <main>
   <div class="cards-grid" id="cards-grid">
-    <!-- Cards inserted here using JS -->
+    <!-- Cards inserted here-->
   </div>
 </main>
 
