--- a/User/index.html
+++ b/User/index.html
@@ -25,6 +25,14 @@
     <!-- Cards inserted here-->
   </div>
 </main>
+<!-- Pomodoro Timer Section -->
+<section id="pomodoro">
+  <h2>Pomodoro Timer</h2>
+  <div id="timer">25:00</div>
+  <button id="startBtn">Start</button>
+  <button id="resetBtn">Reset</button>
+</section>
+
 
 <!-- Login Modal -->
 <div id="login-modal">
