--- a/User/index.html
+++ b/User/index.html
@@ -11,6 +11,10 @@
   <div class = "heads">
   <h1>Study Hub</h1>
   <h2>Connect. Collaborate. Conquer.</h2>
+  <div class="add-group-section">
+  <button id="open-add-group" class="btn-submit">+ Add Group</button>
+</div>
+
 </div>
   <hr>
 <nav>
@@ -25,6 +29,13 @@
     <!-- Cards inserted here-->
   </div>
 </main>
+<!-- Pomodoro Timer Section -->
+<section id="pomodoro">
+  <h2>Pomodoro Timer</h2>
+  <div id="timer">25:00</div>
+  <button id="startBtn">Start</button>
+  <button id="resetBtn">Reset</button>
+</section>
 
 <!-- Login Modal -->
 <div id="login-modal">
@@ -77,6 +88,26 @@
     <p class="switch-auth">Already have an account? <a href="#" id="switch-to-login">Log in here</a></p>
   </div>
 </div>
+<!-- Add Group Modal -->
+<div id="add-group-modal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" id="close-add-group">&times;</span>
+    <h2>Add New Study Group</h2>
+    <form id="add-group-form">
+      <label for="unitName">Unit Name:</label>
+      <input type="text" id="unitName" required>
+
+      <label for="category">Category:</label>
+      <input type="text" id="category" required>
+
+      <label for="members">Members (number):</label>
+      <input type="number" id="members" required>
+
+      <button type="submit" class="btn-submit">Create Group</button>
+    </form>
+  </div>
+</div>
+
 
 <script src="script.js"></script>
 
