Final commit from powwwy

--- a/User/login.html
+++ b/User/login.html
@@ -24,6 +24,7 @@
         <button type="submit" class="btn-submit">Login</button>
       </form>
       <p class="switch-auth">Don't have an account? <a href="#" id="switch-to-signup">Sign Up here</a></p>
+       <p class="switch-auth">Admin? <a href="/Study-Hub/php/admin_login.php" >Admin Login</a></p>
     </div>
   </div>
 
