--- a/User/index.html
+++ b/User/index.html
@@ -11,10 +11,6 @@
   <div class = "heads">
   <h1>Study Hub</h1>
   <h2>Connect. Collaborate. Conquer.</h2>
-  <div class="add-group-section">
-  <button id="open-add-group" class="btn-submit">+ Add Group</button>
-</div>
-
 </div>
   <hr>
 <nav>
@@ -24,86 +20,23 @@
   <a class="btn-login" id="open-login-btn" href="login.html" >Login / Signup</a>
 </nav>
 
-<main>
-  <div class="cards-grid" id="cards-grid">
-    <!-- Cards inserted here-->
-  </div>
-</main>
+  <h2 style="text-align:center;">Explore Study Groups</h2>
+  <div id="groups-list" class="card-container"></div>
 
-
-<!-- Login Modal -->
-<div id="login-modal">
-  <div class="login-box">
-    <span class="close-btn" id="close-login">&times;</span>
-    <h2>Login</h2>
-    <form id="login-form" novalidate>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
-      <div class="error-msg" id="email-error">Please enter a valid email.</div>
-
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" minlength="6" required />
-      <div class="error-msg" id="password-error">Password must be at least 6 characters.</div>
-
-      <button type="submit" class="btn-submit">Login</button>
-    </form>
-    <p class="switch-auth">Don't have an account? <a href="#" id="switch-to-signup">Sign Up here</a></p>
-  </div>
-</div>
-<!-- Signup Modal -->
-<div id="signup-modal">
-  <div class="login-box">
-    <span class="close-btn" id="close-signup">&times;</span>
-    <h2>Sign Up</h2>
-    <form id="signup-form" novalidate>
-      <label for="signup-student-id">Student ID:</label>
-<input type="text" id="signup-student-id" name="student_id" required />
-<div class="error-msg" id="signup-id-error">Please enter a valid 6-digit number (e.g., 123456).</div>
-
-<label for="signup-name">Name:</label>
-<input type="text" id="signup-name" name="name" required />
-<div class="error-msg" id="signup-name-error">Please enter a valid name (letters only, no numbers).</div>
-
-<label for="signup-course">Course:</label>
-<input type="text" id="signup-course" name="course" required />
-<div class="error-msg" id="signup-course-error">Enter 3–5 uppercase letters (e.g., BBIT, CS).</div>
-
-
-      <label for="signup-email">Email:</label>
-      <input type="email" id="signup-email" name="email" required />
-      <div class="error-msg" id="signup-email-error">Please enter a valid email.</div>
-
-      <label for="signup-password">Password:</label>
-      <input type="password" id="signup-password" name="password" minlength="6" required />
-      <div class="error-msg" id="signup-password-error">Password must be at least 6 characters.</div>
-
-      <button type="submit" class="btn-submit">Create Account</button>
-    </form>
-    <p class="switch-auth">Already have an account? <a href="#" id="switch-to-login">Log in here</a></p>
-  </div>
-</div>
-<!-- Add Group Modal -->
-<div id="add-group-modal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn" id="close-add-group">&times;</span>
-    <h2>Add New Study Group</h2>
-    <form id="add-group-form">
-      <label for="unitName">Unit Name:</label>
-      <input type="text" id="unitName" required>
-
-      <label for="category">Category:</label>
-      <input type="text" id="category" required>
-
-      <label for="members">Members (number):</label>
-      <input type="number" id="members" required>
-
-      <button type="submit" class="btn-submit">Create Group</button>
-    </form>
-  </div>
-</div>
-
-
-<script src="script.js"></script>
-
+  <script>
+    fetch('../php/get_groups.php')
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById('groups-list');
+        container.innerHTML = data.map(group => `
+          <div class="card">
+            <h3>${group.name}</h3>
+            <p><strong>Category:</strong> ${group.category}</p>
+            <p>${group.description}</p>
+            <button class="join-btn" onclick="location.href='login.html'">Join Group</button>
+          </div>
+        `).join('');
+      });
+  </script>
 </body>
 </html>
