added chat features

--- a/User/login.html
+++ b/User/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="/Study-Hub/css/login.css" />
   <title>Login / Sign Up</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
         <button type="submit" class="btn-submit">Login</button>
       </form>
       <p class="switch-auth">Don't have an account? <a href="#" id="switch-to-signup">Sign Up here</a></p>
-       <p class="switch-auth">Admin? <a href="/Study-Hub/php/admin_login.php" >Admin Login</a></p>
+       <p class="switch-auth">Admin? <a href="/Study-Hub/Admin/admin_login.php" >Admin Login</a></p>
     </div>
   </div>
 
